dev-vpc-igw.tf
# Provision Dev Internet Gateway
resource "aws_internet_gateway" "dev-igw" {
  vpc_id = "${aws_vpc.dev-vpc.id}"

  tags {
    Name = "dev-igw"
  }
}
